Minor spelling fix in programming guide

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -4349,7 +4349,7 @@ can be used as a generic barrier in application code.
 The barrier uses both the data distribution for synchronizing its data,
 as well as custom command packets to implement the barrier logics. A
 barrier is a versioned object. Each version can have a different height,
-and enter request are automatically grouped together by version.
+and enter requests are automatically grouped together by version.
 
 
 \subsection{\label{sNetUsage}Usage in Equalizer}
